--- a/api/package.json
+++ b/api/package.json
@@ -10,13 +10,15 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
+    "prisma": "^5.6.0",
     "@prisma/client": "^5.6.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
