--- a/app/pages/tsconfig.json
+++ b/app/pages/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "api"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/.next/types/**/*.ts"],
+  "exclude": ["pages/node_modules", "api"]
 }
